# AstralGalaxyMusic

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/audio/: ffmpeg.rs  galaxy.rs  mod.rs
src-tauri/src/modules/: commands.rs  mod.rs  state.rs  utils.rs
src/assets/: style.css
src/components/: AboutPage.vue  CreditsPage.vue  DynamicIsland.vue  LyricsView.vue  PlayerControls.vue  PlayerDashboard.vue  PlaylistDrawer.vue  SettingsPanel.vue  SideNavigation.vue  TheIsland.vue
src/stores/: player.ts
src/stores/modules/: engine.ts  playlist.ts  types.ts
