[package]
name = "astralgalaxymusicplayer"
version = "2.0.0"
description = "A next-gen music player"
authors = [
    "Maple Bamboo Team",
    "FengLiMeng",
    "icey_forest",
    "SharwOrange"
]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-opener = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 🔥 修正后的 Windows Features：增加 foundation_concurrency 以支持 .await
windows = { version = "0.58.0", features = [
    "Media_Control",
    "Storage_Streams",
    "Storage",
    "Foundation",
    "Win32_System_WinRT_Media",
    "Win32_Foundation"
] }
souvlaki = "0.7"
raw-window-handle = "0.6"
url = "2.5"
urlencoding = "2.1"
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }
memmap2 = "0.9"
ringbuf = "0.4"
lofty = "0.15"
rfd = "0.14"
base64 = "0.21"
rayon = "1.8"
encoding_rs = "0.8"
claxon = "0.4"
symphonia = { version = "0.5", features = ["flac", "wav", "mp3", "aac", "alac"] }
chrono = "0.4"
biquad = "0.4.2"
rubato = "0.14"
crossbeam-channel = "0.5"
zip = "2.2"  
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
tokio = { version = "1.50.0", features = ["time"] }

# 🔥 极致优化配置
#[profile.dev.package."*"]
#opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
